# IHCProyecto

./: README.md  docker-compose.yml
arduino/: sensor_listener.py
arduino/sensor/: sensor.ino
axel-server/: main.py  mqtt_topics.py  pyproject.toml  sensor_listener.py
axel-server/arduino/init/: init.ino
frontend-ihc/: docker-compose.yml  package-lock.json  package.json
frontend-ihc/src/app/: mqttClient.ts  page.tsx
frontend-ihc/src/app/Component/: MqttComponent.tsx
frontend-ihc/src/components/: MQTTClient.tsx
frontend-ihc/src/utils/: firebase.ts  mqttClient.ts
luiggy-server/: main.py  mqtt_topics.py  pyproject.toml  sensor_listener.py
luiggy-server/arduino/init/: init.ino
